fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ h4{
 
 #third-sec{
     background-color: #2D4059;
-    height: 700px;
+    /* height: 700px; */
     width: 100%;
    
 
@@ -384,16 +384,18 @@ h4{
 }
 
 #fourth-sec{
-    height: 264px;
+    /* height: 600px; */
     width: auto;
     background-color: #2D4059;
+    padding: 15rem 0rem;
 }
 .fourth{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 0px 8rem;
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row; 
+    margin: 0px 8rem;   
 /* align-items: center;     */
 }
 .rows{
@@ -424,12 +426,13 @@ h4{
     /* height: 1156px; */
     display: flex;
     background-color: #2D4059;
+   
     flex-direction: column;
     /* align-items: center; */
     /* justify-content:flex-start; */
     /* padding: 160px 0px; */
     /* padding: 0px 110px; */
-    padding-bottom: 80px;
+    padding: 80px 0px;
     /* padding-left: 110px;
     */
    
@@ -476,10 +479,12 @@ h4{
     flex-direction: column;
     /* margin: 100px 0px; */
     padding: 60px 110px;
-  
+    
 
 
 }
+
+
 .color{
     color: #96BB7C;
     font-size: 14px;
@@ -487,14 +492,16 @@ h4{
     letter-spacing: 1px;
 }
 .head-fifth{
-        padding-top: 20px;
+        /* padding-top: 20px; */
+        margin-bottom: 0;
+        padding: 25px 0px;
 }
 .five-head p{
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 1px;
     color: #fff;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 
 .down-five{
@@ -562,6 +569,7 @@ span{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    /* align-items: center; */
     
 }
 
@@ -716,11 +724,12 @@ color: #fff;
 
 
 #seventh-sec{
-    height: 855px;
+    /* height: 855px; */
     background-color: #2D4059;
     /* display: flex;
     flex-direction: column;
     align-items: flex-start; */
+    padding: 50px 0px;
 }
 
 
@@ -786,6 +795,7 @@ background-color: #fff;
 }
 
 .head-eight{
+    margin: 0;
     padding: 30px 0px;
     
 }
@@ -857,9 +867,13 @@ background-color: #fff;
 
 
 @media screen and (max-width: 600px) {
-    #home{
+    /* #home{
         width: 100%;
-       
+    } */
+
+    *{
+       overflow-x: hidden;
+
     }
     .main{
         display: flex;
@@ -919,6 +933,10 @@ nav ul li{
     margin-bottom: 34px;
 }
 
+#fourth-sec{
+    padding: 0;
+}
+
 .fourth{
     height: auto;
     display: flex;
@@ -926,7 +944,8 @@ nav ul li{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 110px 0px;
+    padding: 10px 0px;
+
 }
 
 #fifth-sec{
@@ -951,21 +970,20 @@ nav ul li{
     padding: 0;
     margin: 0;    */
 
-.main-five{
-   
+.main-five{ 
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 30px 0px;
 }
 .pad{
-    padding-top: 35rem;
+    padding: 10px 0px;
 }
 
 
 .card{
-    margin: 20px 0px;
- 
+    margin: 10px 0px;
+   
 }
 
 .down-five{
@@ -1040,16 +1058,16 @@ nav ul li{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     text-align: center;
 }
 
 .last-div{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    padding: 20px 15px;
+    padding: 20px 7px;
     
 
 }
